# SysScope

./: README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-07-22-sysscope-phase1.md  2026-07-22-sysscope-phase2.md  2026-07-23-sysscope-bind-toggle.md  2026-07-23-sysscope-phase3.md  2026-07-23-sysscope-phase4.md
docs/superpowers/specs/: 2026-07-22-sysscope-design.md
sysscope/collector/: cgroup.py  connections.py  disk_collector.py  diskstats.py  docker_stats.py  fatrace.py  fdscan.py  io_attribution.py  main.py  netdev.py  power.py  procstat.py  services_collector.py  sysinfo.py  systemd_units.py  wakeups.py
sysscope/common/: config.py  run.py  sizes.py
sysscope/storage/: __init__.py  db.py
sysscope/web/: app.py  settings.py
sysscope/web/static/: app.js  index.html  style.css
systemd/: sysscope-collector.service  sysscope-web.service
tests/: test_cgroup.py  test_config.py  test_connections.py  test_db.py  test_db_phase2.py  test_disk_collector.py  test_disk_info.py  test_diskstats.py  test_docker_stats.py  test_fatrace.py  test_fdscan.py  test_incident_summary.py  test_io_attribution.py  test_netdev.py  test_power.py  test_procstat.py  test_services_collector.py  test_settings.py  test_sizes.py  test_sysinfo.py  test_systemd_units.py  test_wakeups.py  test_web.py  test_web_disk_info.py  test_web_phase2.py  test_web_phase3.py  test_web_settings.py
